Shared Media: Fix jumping scrolled content when switching tabs

--- a/src/components/right/RightColumnInfo.scss
+++ b/src/components/right/RightColumnInfo.scss
@@ -110,11 +110,6 @@
 
   .Transition {
     flex-grow: 1;
-
-    &.slide {
-      overflow: hidden;
-      height: auto !important;
-    }
   }
 
   .content {
